--- a/index.html
+++ b/index.html
@@ -1,14 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>Tawhid's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+    </style>
+  </head>
 
-
-<body>
-    <section>
-        <h1>H! I'm Tawhid</h1>
+  <body>
+    <section class="first-section">
+      <div class="nav-list">
+        <a href="">ABOUT</a>
+        <a href="">WORKS</a>
+        <a href="">CONTACT</a>
+        <a href="">RESUME</a>
+      </div>
     </section>
-</body>
+    <section class="section-two">
+      <div class="half-width">
+        <h1>H! I'm <span class="text-highlight">Tawhid</span></h1>
+        <h3 class="text-highlight">| A world class professional developer</h3>
+        <p>
+          An enthusiastic and creative developer with hands-on skills in a wide
+          range of software, tools, and programming languages.
+        </p>
+        <a class="link-btn" href="http://" target="_blank">HIRE ME</a>
+      </div>
+      <div class="half-width">
+        <img src="images/tawhid.png" alt="" />
+      </div>
+    </section>
+    <section class="section-two">
+      <div class="half-width">
+        <img src="images/tawhid.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h1 class="text-highlight">ABOUT</h1>
+        <p>
+          I am passionate about my work. Because I love what I do, Recently a
+          large development team has taught me skills in HTML5, CSS, Javascript,
+          Es6, ReactJs, Nodejs, ExpressJs etc They also teach me how to adjust
+          to the changing dynamics and processes of those environments and learn
+          new topics that helped me to do better work.
+        </p>
+        <a class="link-btn" href="http://" target="_blank">Download CV</a>
+      </div>
+    </section>
+    <section class="section-two">
+      <h1>| Latest Worked <span class="text-highlight">Projects</span></h1>
+      <div class="low-width">
+        <img src="images/image 4.png" alt="" />
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
+          enim impedit praesentium hic!
+        </p>
+      </div>
+      <div class="low-width">
+        <img src="images/image 5.png" alt="" />
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
+          enim impedit praesentium hic!
+        </p>
+      </div>
+      <div class="low-width">
+        <img src="images/image 8.png" alt="" />
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam
+          enim impedit praesentium hic!
+        </p>
+      </div>
+    </section>
+    <section class="work-inquiry">
+      <div>
+        <div class="inquiry-div"><h1 id="text-h1">Work-Inquiry</h1></div>
+        <div id="inquiry-div" class="">
+          <a href="http://" target="_blank">Let's Chat</a>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-div">
+        <h3>STAY CONNECTED</h3>
+        <h2>muhammadtawhid.me@gmail.com</h2>
+        <img src="icons/image 6.png" alt="" />
+        <img src="icons/Group 33059.png" alt="" />
+        <img src="icons/image 7.png" alt="" />
+      </div>
+    </footer>
+  </body>
 </html>
