--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Tawhid's Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
+     @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
     </style>
+          
   </head>
 
   <body>
