mybe last commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <!-- navbar section -->
     <section class="first-section">
       <div class="nav-list">
         <a href="">ABOUT</a>
